[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "py_bevy"
version = "0.1.1"
description = "a state-based, bevy like, automatic, game-loop generator that used esper under the hood as an ECS database"  
readme = "README.md"
authors = [
  { name="Eoghan West", email="eowest@gmail.com" },
]
license = {text = "MIT License"}
classifiers = [ 
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.9",
]
dependencies = [
    "esper",
    # "pygame",
    "joblib",
]

[project.urls]
"Homepage" = "https://github.com/calacuda/py-bevy"
"Bug Tracker" = "https://github.com/calacuda/py-bevy/issues"
